# investment-studio

./: .babelrc.js  .env.example  .env.test  .eslintrc.json  .gitignore  .npmrc  .npmrc.local  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  build_installer.md  electron-builder.config.js  electron-builder.test.yml  electron-builder.vite.config.js  electron.vite.config.ts  eslint.config.mjs  jest.config.js  kosmos.code-workspace  package-lock.json  package.json  package.json.backup  playwright.config.ts  tailwind.config.js  test-mcp-fetcher.js  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.build.json  tsconfig.renderer.json  vitest.config.ts  webpack.main.config.js  webpack.renderer.config.js
.husky/: pre-commit
ai.prompt/: arch-main.md  arch-render.md  compile-system.md  data-flow.md  log-analysis.md  plugin-system.md  postmortem-content-overflow-regression.md  postmortem-excessive-logging-ui-freeze.md  postmortem-streaming-render-loop.md  postmortem-token-estimation-overflow.md  postmortem-v2.7.10-signing-hang.md  refactor-builtin-tools-prd.md  refactor-builtin-tools-tech-design.md  tool-search-design.md  (+4 more)
resources/mcp/research/: .gitignore  pyproject.toml  requirements.txt
resources/mcp/research/src/research_mcp/: __main__.py  server.py
resources/mcp/research/src/research_mcp/lib/: result.py
resources/mcp/research/src/research_mcp/tools/: compute.py  data_collect.py  env.py  pdf.py  report.py
resources/mcp/research/tests/: test_compute.py  test_data_collect.py  test_env.py  test_pdf.py  test_report.py
(+2089 files in other folders)
