[project]
name = "research-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "tushare>=1.4.0",
  "akshare>=1.13.0",
  "yfinance>=0.2.40",
  "pandas>=2.0.0",
  "pdfplumber>=0.11.0",
  "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
